# vscode-cmake-tutorial

./: CMakeLists.txt  README.adoc  vcpkg-configuration.json
